# Project file for Multi Diag Tools
# * Part: mdtcsv *

# Project
project (multidiagtools)

# List of source files
set (SOURCES_FILES 
          mdtCsvStringParser.cpp
          mdtCsvFileParser.cpp
          mdtCsvStringGenerator.cpp
          mdtCsvFileGenerator.cpp
          mdtCsvSourceInfo.cpp
          mdtCsvStringInfo.cpp
          mdtCsvFileInfo.cpp
          mdtCsvRecordFormat.cpp
          mdtCsvSettingsWidget.cpp
          mdtCsvParserSettingsWidget.cpp
          mdtCsvFileParserModel.cpp
          mdtCsvParserModel.cpp
          mdtCsvGeneratorSettingsWidget.cpp
          mdtCsvFileSettingsWidget.cpp
          mdtCsvFileParserSettingsDialog.cpp
          mdtCsvFileGeneratorSettingsDialog.cpp
          mdtCsvTableViewDataMapper.cpp
          mdtCsvTableViewExportThread.cpp
          mdtCsvTableViewExportDialog.cpp
    )

# Output library
add_library (mdtcsv${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} Qt5::Widgets)
#target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} Qt5::Sql)
target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} "mdterror${MDTLIB_VERSION_SUFFIX}")
target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} "mdterrorgui${MDTLIB_VERSION_SUFFIX}")

# Translations - We generate a .pro file, that simplify the usage of lupdate
file(WRITE "${PROJECT_SOURCE_DIR}/../../translations/mdtcsv.pro" "# Translations project file for lupdate/lrelease\n")
file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtcsv.pro" "# This file is generated by CMake, all changes will be lost\n")
file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtcsv.pro" "TRANSLATIONS = ${PROJECT_SOURCE_DIR}/../../translations/mdtutils_fr.ts\n")
file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtcsv.pro" "TRANSLATIONS += ${PROJECT_SOURCE_DIR}/../../translations/mdtutils_de.ts\n")
foreach(SRCFILE ${SOURCES_FILES})
  file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtcsv.pro" "SOURCES += ${PROJECT_SOURCE_DIR}/${SRCFILE}\n")
endforeach(SRCFILE)
foreach(FRMFILE ${FORM_FILES})
  file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtcsv.pro" "FORMS += ${PROJECT_SOURCE_DIR}/${FRMFILE}\n")
endforeach(FRMFILE)

# Headers to install
file(GLOB INSTALL_HEADERS *.h)
install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtcsv" COMPONENT dev)

# Install targets
install(TARGETS "mdtcsv${MDTLIB_VERSION_SUFFIX}" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)

# Strip library and put debug symbols into separate file
if(UNIX)
  add_custom_command(TARGET "mdtcsv${MDTLIB_VERSION_SUFFIX}"
                    POST_BUILD
                    COMMAND objcopy --only-keep-debug "libmdtcsv${MDTLIB_VERSION_SUFFIX}.so" "libmdtcsv${MDTLIB_VERSION_SUFFIX}.dbg"
                    COMMAND strip --strip-debug --strip-unneeded "libmdtcsv${MDTLIB_VERSION_SUFFIX}.so"
                    COMMAND objcopy --add-gnu-debuglink="libmdtcsv${MDTLIB_VERSION_SUFFIX}.dbg" "libmdtcsv${MDTLIB_VERSION_SUFFIX}.so"
                    COMMAND chmod -x "libmdtcsv${MDTLIB_VERSION_SUFFIX}.dbg")
  install(FILES "libmdtcsv${MDTLIB_VERSION_SUFFIX}.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
endif(UNIX)
